Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112611

Can not build Qt 6.5.0 with ClangCl and MSVC 2022 17.5 due to QDateTime issue

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.1
    • 6.5.0
    • Core: Date/Time
    • None
    • Windows
    • f9643f42c (6.5)

    Description

      I have built all releases of Qt since several years successfully with ClangCl and MSVC. Now Qt 6.5.0 fails with the following error:

      [build] In file included from C:/BDA/Src/qt/qtbase/src/corelib/global/qglobal.cpp:9:
      [build] In file included from C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore\qdir.h:1:
      [build] In file included from C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/io/qdir.h:9:
      [build] In file included from C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include\QtCore/qfileinfo.h:1:
      [build] In file included from C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/io/qfileinfo.h:11:
      [build] In file included from C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include\QtCore/qdatetime.h:1:
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(457,19): error: no matching constructor for initialization of 'QDateTime'
      [build]         QDateTime result(QDate(1970, 1, 1), QTime(0, 0, 0), Qt::LocalTime);
      [build]                   ^      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(319,5): note: candidate constructor not viable: no known conversion from 'Qt::TimeSpec' to 'const QTimeZone' for 3rd argument
      [build]     QDateTime(QDate date, QTime time, const QTimeZone &timeZone);
      [build]     ^
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(320,5): note: candidate constructor not viable: requires 2 arguments, but 3 were provided
      [build]     QDateTime(QDate date, QTime time);
      [build]     ^
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(321,5): note: candidate constructor not viable: requires single argument 'other', but 3 arguments were provided
      [build]     QDateTime(const QDateTime &other) noexcept;
      [build]     ^
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(322,5): note: candidate constructor not viable: requires single argument 'other', but 3 arguments were provided
      [build]     QDateTime(QDateTime &&other) noexcept;
      [build]     ^
      [build] C:/data/usr-tmp-C10Sk32c193532215c1507/Debug/qt/qtbase/include/QtCore/../../../../../../../BDA/Src/qt/qtbase/src/corelib/time/qdatetime.h(314,5): note: candidate constructor not viable: requires 0 arguments, but 3 were provided
      [build]     QDateTime() noexcept;
      [build]     ^
      [build] 1 warning and 1 error generated.
      

      The code that fails to build reads:

          QT_POST_CXX17_API_IN_EXPORTED_CLASS
          static QDateTime fromStdLocalTime(const std::chrono::local_time<std::chrono::milliseconds> &time)
          {
              QDateTime result(QDate(1970, 1, 1), QTime(0, 0, 0), Qt::LocalTime);
              return result.addMSecs(time.time_since_epoch().count());
          }
      

      We build with C++20 enabled, using LLVM 16.0.0 and MSVC 17.5.

      Attached are the files config.summary cmake.trace build.ninja CMakeCache.txt buildlog.txt.

      Attachments

        For Gerrit Dashboard: QTBUG-112611
        # Subject Branch Project Status CR V

        Activity

          People

            manordheim MÃ¥rten Nordheim
            emmenlau Mario Emmenlauer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes