QDateTime: Fix inline use of deprecated ctor

FTBFS with clang-cl. Errors out due to no conversion between
TimeSpec and TimeZone.

Solution is simple: the default is LocalTime, so drop the 3rd argument.

Fixes: QTBUG-112611
Change-Id: I27307f72680836b0a142aa49e5e9653996a0b2fc
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Konrad Kujawa <konrad.kujawa@qt.io>
(cherry picked from commit 08ea2c5dc8203c89c61a38047d2e8c68fb403e06)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>