src/corelib/time/qdatetime.h
@@ -454,7 +454,7 @@ public:
     QT_POST_CXX17_API_IN_EXPORTED_CLASS
     static QDateTime fromStdLocalTime(const std::chrono::local_time<std::chrono::milliseconds> &time)
     {
-        QDateTime result(QDate(1970, 1, 1), QTime(0, 0, 0), Qt::LocalTime);
+        QDateTime result(QDate(1970, 1, 1), QTime(0, 0, 0));
         return result.addMSecs(time.time_since_epoch().count());
     }
 
